--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 </head>
 <body>
 <div id="root"></div>
-<script src="/dist/js/app.min.js"></script>
+<script src="./example/dist/js/app.min.js"></script>
 </body>
 </html>
